--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FitnessTracker</title>
+  <title> Podium - Your Apex Legends Source </title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <!-- icon link -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+  <!-- font link -->
+  <link href="https://fonts.googleapis.com/css?family=Nova+Flat" rel="stylesheet">
+  <!-- -- -->
 </head>
 <body>
   <app-root></app-root>
